deployments/envs/prd/result/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-result-app
  labels:
    app: voting-system
    component: result
