deployments/envs/prd/result/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: result-app-route
  namespace: ns-result-app
spec:
  parentRefs:
  - name: shared-gateway
    namespace: gateway
    sectionName: https
  hostnames:
  - "voteing-app.gcp.cloud"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /result
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: result-app-service
      port: 80
